# world-cup-sweepstake

./: LICENSE  docker-compose.yml
scraper/: Dockerfile  entrypoint.sh  main.py  pyproject.toml
site/: games.html  index.html  styles.css
site/data/: games.json  scores.json
