[tool.poetry]
package-mode = false

[project]
name = "scraper"
version = "0.1.0"
description = "World Cup sweepstake score scraper"
requires-python = ">=3.13,<3.14"
dependencies = [
    "beautifulsoup4 (>=4.13,<5.0)",
    "playwright (>=1.60,<2.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
